--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,5 @@
 [deps]
+Biofilm = "210d8ceb-62d9-4e79-bbbd-4c6870635f0a"
 CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
 DifferentialEquations = "0c46a032-eb83-5123-abaf-570d42b7fbaa"
 Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
